Attempted fix for Ubuntu slide edit right side too big issue

--- a/src/main/resources/org/praisenter/styles/base.css
+++ b/src/main/resources/org/praisenter/styles/base.css
@@ -565,6 +565,7 @@
 .p-documents-pane-selection-editor {
 	-fx-min-width: 350;
 	-fx-pref-width: 350;
+	-fx-max-width: 500;
 }
 
 /* EDITOR FIELDS */
